0.7.1/_sources/gallery/labels3d.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/labels3d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_labels3d.py>`
        to download the full example as a Python script or as a
        Jupyter notebook..

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_labels3d.py:


Labels 3D
=========

View 3D labels.

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 9-47



.. image-sg:: /gallery/images/sphx_glr_labels3d_001.png
   :alt: labels3d
   :srcset: /gallery/images/sphx_glr_labels3d_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/napari/examples/labels3d.py:27: FutureWarning: Parameter `area_threshold` is deprecated since version 0.26.0 and will be removed in 2.0.0 (or later). To avoid this warning, please use the parameter `max_size` instead. For more details, see the documentation of `remove_small_holes`. Note that the new threshold removes objects smaller than **or equal to** its value, while the previous parameter only removed smaller ones.
      morphology.remove_small_holes(thresholded, 20**3),
    /home/runner/work/docs/docs/napari/examples/labels3d.py:26: FutureWarning: Parameter `min_size` is deprecated since version 0.26.0 and will be removed in 2.0.0 (or later). To avoid this warning, please use the parameter `max_size` instead. For more details, see the documentation of `remove_small_objects`. Note that the new threshold removes objects smaller than **or equal to** its value, while the previous parameter only removed smaller ones.
      cleaned = morphology.remove_small_objects(






|

.. code-block:: Python



    import numpy as np
    from scipy import ndimage as ndi
    from skimage import data, filters, morphology

    import napari

    cells3d = data.cells3d()
    viewer = napari.Viewer()
    membranes_layer, nuclei_layer = viewer.add_image(
        cells3d, channel_axis=1, name=['membranes', 'nuclei']
    )
    membrane, nuclei = cells3d.transpose((1, 0, 2, 3)) / np.max(cells3d)
    edges = filters.scharr(nuclei)
    denoised = ndi.median_filter(nuclei, size=3)
    thresholded = denoised > filters.threshold_li(denoised)
    cleaned = morphology.remove_small_objects(
        morphology.remove_small_holes(thresholded, 20**3),
        20**3,
    )

    segmented = ndi.label(cleaned)[0]
    # maxima = ndi.label(morphology.local_maxima(filters.gaussian(nuclei, sigma=10)))[0]
    # markers_big = morphology.dilation(maxima, morphology.ball(5))

    # segmented = segmentation.watershed(
    #     edges,
    #     markers_big,
    #     mask=cleaned,
    # )

    labels_layer = viewer.add_labels(segmented)

    viewer.dims.ndisplay = 3

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_labels3d.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: labels3d.ipynb <labels3d.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: labels3d.py <labels3d.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: labels3d.zip <labels3d.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
